# dev

ai/: CMakeLists.txt
ai/cpp/: autoencoder.cpp  dataset.cpp  dcnn.cpp  dqn.cpp  factory.cpp  i_dataset.cpp  i_nn.cpp  io_dataset.cpp  mlp.cpp  nn.cpp  options.cpp  utils.cpp
ai/export/velta/ai/: ai_api.hpp  factory.hpp  i_dataset.hpp  i_nn.hpp  options.hpp
ai/export/velta/ai/pch/: torch.hpp
ai/hpp/velta/ai/: autoencoder.hpp  dataset.hpp  dcnn.hpp  dqn.hpp  io_dataset.hpp  mlp.hpp  nn.hpp  utils.hpp
test/: CMakeLists.txt  table.cpp  table.hpp  test.cpp
